Custom Normal Data Transfer crash. #44631

Closed
opened 2015-05-07 15:09:55 +02:00 by Drongle McMahon · 6 comments

Windows 7 64-bit
Nvidia GeForce GTX 670 driver version 311.06

Blender Version
Broken: 2.74 165598e (2015-05-07) and bc2f77e (2015-05-06)
Worked: 2.74 9b99786 (2015-04-14)

Crash to destop on Data transfer of Custom normals.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. Open default file
  2. Select defualt cube and shft+D to duplicate
  3. Move (drag) duplicated cube above original
  4. Select original cube
  5. Add modifier: Data Transfer
  6. Select duplicated cube as source object
  7. Check Face Corner Data
  8. Click Custom Normals ......... Immediate crash.

Notes:

  1. Same with 32 bit and 64 bit versions.
  2. If you Postpone step 6 to the end, then the crash happens when you select the source object.
  3. Same thing happens usong tool version instead of modifier
Windows 7 64-bit Nvidia GeForce GTX 670 driver version 311.06 **Blender Version** Broken: 2.74 165598e (2015-05-07) and bc2f77e (2015-05-06) Worked: 2.74 9b99786 (2015-04-14) Crash to destop on Data transfer of Custom normals. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1. Open default file 2. Select defualt cube and shft+D to duplicate 3. Move (drag) duplicated cube above original 4. Select original cube 5. Add modifier: Data Transfer 6. Select duplicated cube as source object 7. Check Face Corner Data 8. Click Custom Normals ......... Immediate crash. Notes: 1. Same with 32 bit and 64 bit versions. 2. If you Postpone step 6 to the end, then the crash happens when you select the source object. 3. Same thing happens usong tool version instead of modifier

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Drongle

Added subscriber: @Drongle
Bastien Montagne self-assigned this 2015-05-07 15:22:34 +02:00

Own mistake in cdabf7e3, fix incoming.

Own mistake in cdabf7e3, fix incoming.

This issue was referenced by a2eb94b470

This issue was referenced by a2eb94b47032502a65027db4b241a40e56f767eb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a2eb94b470.

Closed by commit a2eb94b470.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44631
No description provided.