Fix T44631: Custom Normal Data Transfer crash.

Own stupid mistake in rBcdabf7e3...